<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.camunda</groupId>
    <artifactId>camunda-release-parent</artifactId>
    <version>4.1.1</version>
    <!-- do not remove empty tag - http://jira.codehaus.org/browse/MNG-4687 -->
    <relativePath />
  </parent>

  <groupId>io.camunda</groupId>
  <artifactId>camunda-7-to-8-data-migrator-root</artifactId>
  <version>0.1.0-SNAPSHOT</version>

  <packaging>pom</packaging>

  <name>Camunda 7 to 8 Data Migrator - Root</name>

  <licenses>
    <license>
      <name>Camunda License v1.0</name>
    </license>
  </licenses>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>

    <version.camunda-7>7.24.0-SNAPSHOT</version.camunda-7>
    <version.camunda-8>8.8.0-SNAPSHOT</version.camunda-8>
    <version.spring-boot>3.5.4</version.spring-boot>
    <version.junit.jupiter>5.13.4</version.junit.jupiter>
    <version.java>21</version.java>
    <version.h2>2.3.232</version.h2>
    <plugin.version.compiler>3.14.0</plugin.version.compiler>
    <plugin.version.nexus-staging>1.7.0</plugin.version.nexus-staging>

    <url.source>jdbc:h2:~/Downloads/c8_rdbms-source.db;TRACE_LEVEL_FILE=0;DB_CLOSE_ON_EXIT=FALSE</url.source>
    <url.target>jdbc:h2:~/Downloads/c8_rdbms-target.db;TRACE_LEVEL_FILE=0;DB_CLOSE_ON_EXIT=FALSE</url.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <nexus.snapshot.repository>https://artifacts.camunda.com/artifactory/zeebe-io-snapshots/</nexus.snapshot.repository>
    <nexus.release.repository>https://artifacts.camunda.com/artifactory/zeebe-io/</nexus.release.repository>
  </properties>

  <profiles>
    <!-- distro profile is default and builds the complete distribution. -->
    <profile>
      <id>distro</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>core</module>
        <module>examples</module>
        <module>qa</module>
        <module>distro</module>
        <module>assembly</module>
      </modules>
    </profile>
    <profile>
      <!-- central-release profile to publish only core module to Maven Central. -->
      <!-- We don't want to publish complete distribution there. -->
      <!-- Used in release workflow. -->
      <id>central-release</id>
      <modules>
        <module>core</module>
      </modules>
    </profile>
  </profiles>

  <scm>
    <connection>scm:git:https://${env.GITHUB_TOKEN_USR}:${env.GITHUB_TOKEN_PSW}@github.com/camunda/camunda-7-to-8-data-migrator
      .git</connection>
    <developerConnection>scm:git:https://${env.GITHUB_TOKEN_USR}:${env.GITHUB_TOKEN_PSW}@github.com/camunda/camunda-7-to-8-data-migrator.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/camunda/camunda-7-to-8-data-migrator</url>
  </scm>

  <repositories>
    <repository>
      <id>zeebe-snapshots</id>
      <snapshots />
      <url>https://artifacts.camunda.com/artifactory/zeebe-io-snapshots/</url>
    </repository>
    <repository>
      <id>camunda-bpm-snapshots</id>
      <snapshots />
      <url>https://artifacts.camunda.com/artifactory/camunda-bpm-snapshots/</url>
    </repository>
    <repository>
      <id>camunda-bpm-ee-snapshots</id>
      <snapshots />
      <url>https://artifacts.camunda.com/artifactory/camunda-bpm-ee-snapshots/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${version.junit.jupiter}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>5.0.0</version>
          <configuration>
            <mapping>
              <java>SLASHSTAR_STYLE</java>
            </mapping>
            <licenseSets>
              <licenseSet>
                <includes>
                  <include>**/*.java</include>
                </includes>
              </licenseSet>
            </licenseSets>
          </configuration>
        </plugin>
        <!-- MAVEN COMPILER -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${plugin.version.compiler}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>${plugin.version.nexus-staging}</version>
          <configuration>
            <stagingProgressTimeoutMinutes>40</stagingProgressTimeoutMinutes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <doclint>none</doclint>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <licenseSets>
            <licenseSet>
              <header>${project.basedir}/license/header.txt</header>
            </licenseSet>
          </licenseSets>
        </configuration>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <failOnError>false</failOnError>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
